// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lexer > should tokenize fixtures ../tests/fixtures/heading.01.md 1`] = `
[
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Title",
  },
  Token {
    "type": "EndOfFile",
    "value": "",
  },
]
`;

exports[`lexer > should tokenize fixtures ../tests/fixtures/heading.02.md 1`] = `
[
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Hello",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "123",
  },
  Token {
    "type": "EndOfFile",
    "value": "",
  },
]
`;

exports[`lexer > should tokenize fixtures ../tests/fixtures/heading.03.md 1`] = `
[
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "1",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "2",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "3",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "4",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "5",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "BreakLine",
    "value": "
",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "Symbol",
    "value": "#",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "Heading",
  },
  Token {
    "type": "WhiteSpace",
    "value": " ",
  },
  Token {
    "type": "Word",
    "value": "6",
  },
  Token {
    "type": "EndOfFile",
    "value": "",
  },
]
`;
